syntax = "proto3";
package cursed_archive;

message FileInfo {
    string id = 1;
    string name = 2;
    string original_path = 3;
    string stored_path = 4;
    int64 size = 5;
    string extension = 6;
    string base_name = 7;
    string parent_directory = 8;
}